# 20.pyclass

./: README.md  pyproject.toml
backend/: Dockerfile  crud.py  database.py  models.py  router.py  schemas.py
