[tool.poetry]
name = "20-pyclass"
version = "0.1.0"
description = ""
authors = ["ferruccio_ribeiro <ferruccioribeiro@outlook.com>"]
readme = "README.md"
packages = [{include = "20"}]

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"
pydantic = {extras = ["email"], version = "^2.10.4"}
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
psycopg2 = "^2.9.10"
psycopg2-binary = "^2.9.10"
streamlit = "^1.41.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
